--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/analytics": "^0.10.19",
+    "@firebase/app": "^0.14.6",
+    "@firebase/messaging": "^0.12.23",
     "@gsap/react": "^2.1.2",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.12",
+    "firebase": "^9.0.0",
     "framer-motion": "^12.23.24",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.555.0",
